--- a/src/assets/css/components/tab.less
+++ b/src/assets/css/components/tab.less
@@ -10,6 +10,10 @@
     overflow-x: auto;
     overflow-y: hidden;
     -webkit-overflow-scrolling: touch;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   // type
